// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a basic table 1`] = `
<div>
  <div
    class="overflow-x-hidden overflow-y-hidden"
  >
    <table
      class="usa-table usa-table--borderless"
      role="table"
    >
      <thead>
        <tr
          role="row"
        >
          <th
            aria-sort="none"
            colspan="1"
            role="columnheader"
            scope="col"
            style="min-width: 0;"
          >
            <span>
              ID
            </span>
            <button
              aria-label="Toggle SortBy: ID"
              class="margin-left-1 usa-button usa-button--unstyled"
              style="cursor: pointer;"
              title="Toggle SortBy: ID"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-chevron-up fa-w-14 hover:text-base text-base"
                data-icon="chevron-up"
                data-prefix="fas"
                focusable="false"
                role="img"
                viewBox="0 0 448 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M240.971 130.524l194.343 194.343c9.373 9.373 9.373 24.569 0 33.941l-22.667 22.667c-9.357 9.357-24.522 9.375-33.901.04L224 227.495 69.255 381.516c-9.379 9.335-24.544 9.317-33.901-.04l-22.667-22.667c-9.373-9.373-9.373-24.569 0-33.941L207.03 130.525c9.372-9.373 24.568-9.373 33.941-.001z"
                  fill="currentColor"
                />
              </svg>
            </button>
          </th>
          <th
            aria-sort="none"
            colspan="1"
            role="columnheader"
            scope="col"
            style="min-width: 0;"
          >
            <span>
              Name
            </span>
            <button
              aria-label="Toggle SortBy: Name"
              class="margin-left-1 usa-button usa-button--unstyled"
              style="cursor: pointer;"
              title="Toggle SortBy: Name"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-chevron-up fa-w-14 hover:text-base text-base"
                data-icon="chevron-up"
                data-prefix="fas"
                focusable="false"
                role="img"
                viewBox="0 0 448 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M240.971 130.524l194.343 194.343c9.373 9.373 9.373 24.569 0 33.941l-22.667 22.667c-9.357 9.357-24.522 9.375-33.901.04L224 227.495 69.255 381.516c-9.379 9.335-24.544 9.317-33.901-.04l-22.667-22.667c-9.373-9.373-9.373-24.569 0-33.941L207.03 130.525c9.372-9.373 24.568-9.373 33.941-.001z"
                  fill="currentColor"
                />
              </svg>
            </button>
          </th>
          <th
            aria-sort="none"
            colspan="1"
            role="columnheader"
            scope="col"
            style="min-width: 0;"
          >
            <span>
              Last Updated
            </span>
            <button
              aria-label="Toggle SortBy: Last Updated"
              class="margin-left-1 usa-button usa-button--unstyled"
              style="cursor: pointer;"
              title="Toggle SortBy: Last Updated"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-chevron-up fa-w-14 hover:text-base text-base"
                data-icon="chevron-up"
                data-prefix="fas"
                focusable="false"
                role="img"
                viewBox="0 0 448 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M240.971 130.524l194.343 194.343c9.373 9.373 9.373 24.569 0 33.941l-22.667 22.667c-9.357 9.357-24.522 9.375-33.901.04L224 227.495 69.255 381.516c-9.379 9.335-24.544 9.317-33.901-.04l-22.667-22.667c-9.373-9.373-9.373-24.569 0-33.941L207.03 130.525c9.372-9.373 24.568-9.373 33.941-.001z"
                  fill="currentColor"
                />
              </svg>
            </button>
          </th>
        </tr>
      </thead>
      <tbody
        role="rowgroup"
      >
        <tr
          role="row"
        >
          <th
            role="cell"
            scope="row"
          >
            1
          </th>
          <td
            role="cell"
          >
            Banana
          </td>
          <td
            role="cell"
          >
            2021-11-11
          </td>
        </tr>
        <tr
          role="row"
        >
          <th
            role="cell"
            scope="row"
          >
            2
          </th>
          <td
            role="cell"
          >
            Chocolate
          </td>
          <td
            role="cell"
          >
            2020-11-11
          </td>
        </tr>
        <tr
          role="row"
        >
          <th
            role="cell"
            scope="row"
          >
            3
          </th>
          <td
            role="cell"
          >
            Vanilla
          </td>
          <td
            role="cell"
          >
            2019-11-11
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`renders a basic table with mobile navigation 1`] = `
<div>
  <div
    class="overflow-x-hidden overflow-y-hidden"
  >
    <table
      class="usa-table usa-table--borderless"
      role="table"
    >
      <thead>
        <tr
          role="row"
        >
          <th
            aria-sort="none"
            colspan="1"
            role="columnheader"
            scope="col"
            style="min-width: 0;"
          >
            <span>
              ID
            </span>
            <button
              aria-label="Toggle SortBy: ID"
              class="margin-left-1 usa-button usa-button--unstyled"
              style="cursor: pointer;"
              title="Toggle SortBy: ID"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-chevron-up fa-w-14 hover:text-base text-base"
                data-icon="chevron-up"
                data-prefix="fas"
                focusable="false"
                role="img"
                viewBox="0 0 448 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M240.971 130.524l194.343 194.343c9.373 9.373 9.373 24.569 0 33.941l-22.667 22.667c-9.357 9.357-24.522 9.375-33.901.04L224 227.495 69.255 381.516c-9.379 9.335-24.544 9.317-33.901-.04l-22.667-22.667c-9.373-9.373-9.373-24.569 0-33.941L207.03 130.525c9.372-9.373 24.568-9.373 33.941-.001z"
                  fill="currentColor"
                />
              </svg>
            </button>
          </th>
          <th
            aria-sort="none"
            colspan="1"
            role="columnheader"
            scope="col"
            style="min-width: 0;"
          >
            <span>
              Name
            </span>
            <button
              aria-label="Toggle SortBy: Name"
              class="margin-left-1 usa-button usa-button--unstyled"
              style="cursor: pointer;"
              title="Toggle SortBy: Name"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-chevron-up fa-w-14 hover:text-base text-base"
                data-icon="chevron-up"
                data-prefix="fas"
                focusable="false"
                role="img"
                viewBox="0 0 448 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M240.971 130.524l194.343 194.343c9.373 9.373 9.373 24.569 0 33.941l-22.667 22.667c-9.357 9.357-24.522 9.375-33.901.04L224 227.495 69.255 381.516c-9.379 9.335-24.544 9.317-33.901-.04l-22.667-22.667c-9.373-9.373-9.373-24.569 0-33.941L207.03 130.525c9.372-9.373 24.568-9.373 33.941-.001z"
                  fill="currentColor"
                />
              </svg>
            </button>
          </th>
          <th
            aria-sort="none"
            colspan="1"
            role="columnheader"
            scope="col"
            style="min-width: 0;"
          >
            <span>
              Last Updated
            </span>
            <button
              aria-label="Toggle SortBy: Last Updated"
              class="margin-left-1 usa-button usa-button--unstyled"
              style="cursor: pointer;"
              title="Toggle SortBy: Last Updated"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-chevron-up fa-w-14 hover:text-base text-base"
                data-icon="chevron-up"
                data-prefix="fas"
                focusable="false"
                role="img"
                viewBox="0 0 448 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M240.971 130.524l194.343 194.343c9.373 9.373 9.373 24.569 0 33.941l-22.667 22.667c-9.357 9.357-24.522 9.375-33.901.04L224 227.495 69.255 381.516c-9.379 9.335-24.544 9.317-33.901-.04l-22.667-22.667c-9.373-9.373-9.373-24.569 0-33.941L207.03 130.525c9.372-9.373 24.568-9.373 33.941-.001z"
                  fill="currentColor"
                />
              </svg>
            </button>
          </th>
        </tr>
      </thead>
      <tbody
        role="rowgroup"
      >
        <tr
          role="row"
        >
          <th
            role="cell"
            scope="row"
          >
            1
          </th>
          <td
            role="cell"
          >
            Banana
          </td>
          <td
            role="cell"
          >
            2021-11-11
          </td>
        </tr>
        <tr
          role="row"
        >
          <th
            role="cell"
            scope="row"
          >
            2
          </th>
          <td
            role="cell"
          >
            Chocolate
          </td>
          <td
            role="cell"
          >
            2020-11-11
          </td>
        </tr>
        <tr
          role="row"
        >
          <th
            role="cell"
            scope="row"
          >
            3
          </th>
          <td
            role="cell"
          >
            Vanilla
          </td>
          <td
            role="cell"
          >
            2019-11-11
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`renders a basic table with mobile navigation 1`] = `
<div>
  <div
    class="overflow-x-hidden overflow-y-hidden"
  >
    <table
      class="usa-table usa-table--borderless"
      role="table"
    >
      <thead>
        <tr
          role="row"
        >
          <th
            colspan="1"
            role="columnheader"
            scope="col"
            style="min-width: 0;"
          >
            <span>
              ID
            </span>
            <button
              class="margin-left-1 usa-button usa-button--unstyled"
              style="cursor: pointer;"
              title="Toggle SortBy ID"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-chevron-up fa-w-14 hover:text-base text-base-lighter"
                data-icon="chevron-up"
                data-prefix="fas"
                focusable="false"
                role="img"
                viewBox="0 0 448 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M240.971 130.524l194.343 194.343c9.373 9.373 9.373 24.569 0 33.941l-22.667 22.667c-9.357 9.357-24.522 9.375-33.901.04L224 227.495 69.255 381.516c-9.379 9.335-24.544 9.317-33.901-.04l-22.667-22.667c-9.373-9.373-9.373-24.569 0-33.941L207.03 130.525c9.372-9.373 24.568-9.373 33.941-.001z"
                  fill="currentColor"
                />
              </svg>
            </button>
          </th>
          <th
            colspan="1"
            role="columnheader"
            scope="col"
            style="min-width: 0;"
          >
            <span>
              Name
            </span>
            <button
              class="margin-left-1 usa-button usa-button--unstyled"
              style="cursor: pointer;"
              title="Toggle SortBy Name"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-chevron-up fa-w-14 hover:text-base text-base-lighter"
                data-icon="chevron-up"
                data-prefix="fas"
                focusable="false"
                role="img"
                viewBox="0 0 448 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M240.971 130.524l194.343 194.343c9.373 9.373 9.373 24.569 0 33.941l-22.667 22.667c-9.357 9.357-24.522 9.375-33.901.04L224 227.495 69.255 381.516c-9.379 9.335-24.544 9.317-33.901-.04l-22.667-22.667c-9.373-9.373-9.373-24.569 0-33.941L207.03 130.525c9.372-9.373 24.568-9.373 33.941-.001z"
                  fill="currentColor"
                />
              </svg>
            </button>
          </th>
          <th
            colspan="1"
            role="columnheader"
            scope="col"
            style="min-width: 0;"
          >
            <span>
              Last Updated
            </span>
            <button
              class="margin-left-1 usa-button usa-button--unstyled"
              style="cursor: pointer;"
              title="Toggle SortBy Last Updated"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-chevron-up fa-w-14 hover:text-base text-base-lighter"
                data-icon="chevron-up"
                data-prefix="fas"
                focusable="false"
                role="img"
                viewBox="0 0 448 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M240.971 130.524l194.343 194.343c9.373 9.373 9.373 24.569 0 33.941l-22.667 22.667c-9.357 9.357-24.522 9.375-33.901.04L224 227.495 69.255 381.516c-9.379 9.335-24.544 9.317-33.901-.04l-22.667-22.667c-9.373-9.373-9.373-24.569 0-33.941L207.03 130.525c9.372-9.373 24.568-9.373 33.941-.001z"
                  fill="currentColor"
                />
              </svg>
            </button>
          </th>
        </tr>
      </thead>
      <tbody
        role="rowgroup"
      >
        <tr
          role="row"
        >
          <th
            role="cell"
            scope="row"
          >
            1
          </th>
          <td
            role="cell"
          >
            Banana
          </td>
          <td
            role="cell"
          >
            2021-11-11
          </td>
        </tr>
        <tr
          role="row"
        >
          <th
            role="cell"
            scope="row"
          >
            2
          </th>
          <td
            role="cell"
          >
            Chocolate
          </td>
          <td
            role="cell"
          >
            2020-11-11
          </td>
        </tr>
        <tr
          role="row"
        >
          <th
            role="cell"
            scope="row"
          >
            3
          </th>
          <td
            role="cell"
          >
            Vanilla
          </td>
          <td
            role="cell"
          >
            2019-11-11
          </td>
        </tr>
      </tbody>
    </table>
  </div>
  
</div>
`;

exports[`renders a basic table without pagination 1`] = `
<div>
  <div
    class="overflow-x-hidden overflow-y-hidden"
  >
    <table
      class="usa-table usa-table--borderless"
      role="table"
    >
      <thead>
        <tr
          role="row"
        >
          <th
            aria-sort="none"
            colspan="1"
            role="columnheader"
            scope="col"
            style="min-width: 0;"
          >
            <span>
              ID
            </span>
            <button
              aria-label="Toggle SortBy: ID"
              class="margin-left-1 usa-button usa-button--unstyled"
              style="cursor: pointer;"
              title="Toggle SortBy: ID"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-chevron-up fa-w-14 hover:text-base text-base"
                data-icon="chevron-up"
                data-prefix="fas"
                focusable="false"
                role="img"
                viewBox="0 0 448 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M240.971 130.524l194.343 194.343c9.373 9.373 9.373 24.569 0 33.941l-22.667 22.667c-9.357 9.357-24.522 9.375-33.901.04L224 227.495 69.255 381.516c-9.379 9.335-24.544 9.317-33.901-.04l-22.667-22.667c-9.373-9.373-9.373-24.569 0-33.941L207.03 130.525c9.372-9.373 24.568-9.373 33.941-.001z"
                  fill="currentColor"
                />
              </svg>
            </button>
          </th>
          <th
            aria-sort="none"
            colspan="1"
            role="columnheader"
            scope="col"
            style="min-width: 0;"
          >
            <span>
              Name
            </span>
            <button
              aria-label="Toggle SortBy: Name"
              class="margin-left-1 usa-button usa-button--unstyled"
              style="cursor: pointer;"
              title="Toggle SortBy: Name"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-chevron-up fa-w-14 hover:text-base text-base"
                data-icon="chevron-up"
                data-prefix="fas"
                focusable="false"
                role="img"
                viewBox="0 0 448 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M240.971 130.524l194.343 194.343c9.373 9.373 9.373 24.569 0 33.941l-22.667 22.667c-9.357 9.357-24.522 9.375-33.901.04L224 227.495 69.255 381.516c-9.379 9.335-24.544 9.317-33.901-.04l-22.667-22.667c-9.373-9.373-9.373-24.569 0-33.941L207.03 130.525c9.372-9.373 24.568-9.373 33.941-.001z"
                  fill="currentColor"
                />
              </svg>
            </button>
          </th>
          <th
            aria-sort="none"
            colspan="1"
            role="columnheader"
            scope="col"
            style="min-width: 0;"
          >
            <span>
              Last Updated
            </span>
            <button
              aria-label="Toggle SortBy: Last Updated"
              class="margin-left-1 usa-button usa-button--unstyled"
              style="cursor: pointer;"
              title="Toggle SortBy: Last Updated"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-chevron-up fa-w-14 hover:text-base text-base"
                data-icon="chevron-up"
                data-prefix="fas"
                focusable="false"
                role="img"
                viewBox="0 0 448 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M240.971 130.524l194.343 194.343c9.373 9.373 9.373 24.569 0 33.941l-22.667 22.667c-9.357 9.357-24.522 9.375-33.901.04L224 227.495 69.255 381.516c-9.379 9.335-24.544 9.317-33.901-.04l-22.667-22.667c-9.373-9.373-9.373-24.569 0-33.941L207.03 130.525c9.372-9.373 24.568-9.373 33.941-.001z"
                  fill="currentColor"
                />
              </svg>
            </button>
          </th>
        </tr>
      </thead>
      <tbody
        role="rowgroup"
      >
        <tr
          role="row"
        >
          <th
            role="cell"
            scope="row"
          >
            1
          </th>
          <td
            role="cell"
          >
            Banana
          </td>
          <td
            role="cell"
          >
            2021-11-11
          </td>
        </tr>
        <tr
          role="row"
        >
          <th
            role="cell"
            scope="row"
          >
            2
          </th>
          <td
            role="cell"
          >
            Chocolate
          </td>
          <td
            role="cell"
          >
            2020-11-11
          </td>
        </tr>
        <tr
          role="row"
        >
          <th
            role="cell"
            scope="row"
          >
            3
          </th>
          <td
            role="cell"
          >
            Vanilla
          </td>
          <td
            role="cell"
          >
            2019-11-11
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`sorting buttons are clickable 1`] = `
<div>
  <div
    class="overflow-x-hidden overflow-y-hidden"
  >
    <table
      class="usa-table usa-table--borderless"
      role="table"
    >
      <thead>
        <tr
          role="row"
        >
          <th
            aria-sort="none"
            colspan="1"
            role="columnheader"
            scope="col"
            style="padding: 0.5rem 1rem;"
          >
            <span>
              <input
                style="cursor: pointer;"
                title="Toggle All Rows Selected"
                type="checkbox"
              />
            </span>
          </th>
          <th
            aria-sort="none"
            colspan="1"
            role="columnheader"
            scope="col"
            style="padding: 0.5rem 1rem;"
          >
            <span>
              ID
            </span>
            <button
              aria-label="Toggle SortBy: ID"
              class="margin-left-1 usa-button usa-button--unstyled"
              style="cursor: pointer;"
              title="Toggle SortBy: ID"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-chevron-up fa-w-14 hover:text-base text-base"
                data-icon="chevron-up"
                data-prefix="fas"
                focusable="false"
                role="img"
                viewBox="0 0 448 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M240.971 130.524l194.343 194.343c9.373 9.373 9.373 24.569 0 33.941l-22.667 22.667c-9.357 9.357-24.522 9.375-33.901.04L224 227.495 69.255 381.516c-9.379 9.335-24.544 9.317-33.901-.04l-22.667-22.667c-9.373-9.373-9.373-24.569 0-33.941L207.03 130.525c9.372-9.373 24.568-9.373 33.941-.001z"
                  fill="currentColor"
                />
              </svg>
            </button>
          </th>
          <th
            aria-sort="none"
            colspan="1"
            role="columnheader"
            scope="col"
            style="padding: 0.5rem 1rem;"
          >
            <span>
              Name
            </span>
            <button
              aria-label="Toggle SortBy: Name"
              class="margin-left-1 usa-button usa-button--unstyled"
              style="cursor: pointer;"
              title="Toggle SortBy: Name"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-chevron-up fa-w-14 hover:text-base text-base"
                data-icon="chevron-up"
                data-prefix="fas"
                focusable="false"
                role="img"
                viewBox="0 0 448 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M240.971 130.524l194.343 194.343c9.373 9.373 9.373 24.569 0 33.941l-22.667 22.667c-9.357 9.357-24.522 9.375-33.901.04L224 227.495 69.255 381.516c-9.379 9.335-24.544 9.317-33.901-.04l-22.667-22.667c-9.373-9.373-9.373-24.569 0-33.941L207.03 130.525c9.372-9.373 24.568-9.373 33.941-.001z"
                  fill="currentColor"
                />
              </svg>
            </button>
          </th>
          <th
            aria-sort="ascending"
            colspan="1"
            role="columnheader"
            scope="col"
            style="padding: 0.5rem 1rem;"
          >
            <span>
              Last Updated
            </span>
            <button
              aria-label="Toggle SortBy: Last Updated"
              class="margin-left-1 usa-button usa-button--unstyled"
              style="cursor: pointer;"
              title="Toggle SortBy: Last Updated"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-chevron-up fa-w-14 hover:text-base text-base-darker"
                data-icon="chevron-up"
                data-prefix="fas"
                focusable="false"
                role="img"
                viewBox="0 0 448 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M240.971 130.524l194.343 194.343c9.373 9.373 9.373 24.569 0 33.941l-22.667 22.667c-9.357 9.357-24.522 9.375-33.901.04L224 227.495 69.255 381.516c-9.379 9.335-24.544 9.317-33.901-.04l-22.667-22.667c-9.373-9.373-9.373-24.569 0-33.941L207.03 130.525c9.372-9.373 24.568-9.373 33.941-.001z"
                  fill="currentColor"
                />
              </svg>
            </button>
          </th>
        </tr>
      </thead>
      <tbody
        role="rowgroup"
      >
        <tr
          role="row"
        >
          <td
            role="cell"
          >
            <input
              aria-labelledby="Vanilla"
              style="cursor: pointer;"
              title="Vanilla"
              type="checkbox"
            />
          </td>
          <td
            role="cell"
          >
            3
          </td>
          <td
            role="cell"
          >
            Vanilla
          </td>
          <td
            role="cell"
          >
            2019-11-11
          </td>
        </tr>
        <tr
          role="row"
        >
          <td
            role="cell"
          >
            <input
              aria-labelledby="Chocolate"
              style="cursor: pointer;"
              title="Chocolate"
              type="checkbox"
            />
          </td>
          <td
            role="cell"
          >
            2
          </td>
          <td
            role="cell"
          >
            Chocolate
          </td>
          <td
            role="cell"
          >
            2020-11-11
          </td>
        </tr>
        <tr
          role="row"
        >
          <td
            role="cell"
          >
            <input
              aria-labelledby="Banana"
              style="cursor: pointer;"
              title="Banana"
              type="checkbox"
            />
          </td>
          <td
            role="cell"
          >
            1
          </td>
          <td
            role="cell"
          >
            Banana
          </td>
          <td
            role="cell"
          >
            2021-11-11
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`sorting buttons are clickable 2`] = `
<div>
  <div
    class="overflow-x-hidden overflow-y-hidden"
  >
    <table
      class="usa-table usa-table--borderless"
      role="table"
    >
      <thead>
        <tr
          role="row"
        >
          <th
            aria-sort="none"
            colspan="1"
            role="columnheader"
            scope="col"
            style="padding: 0.5rem 1rem;"
          >
            <span>
              <input
                style="cursor: pointer;"
                title="Toggle All Rows Selected"
                type="checkbox"
              />
            </span>
          </th>
          <th
            aria-sort="none"
            colspan="1"
            role="columnheader"
            scope="col"
            style="padding: 0.5rem 1rem;"
          >
            <span>
              ID
            </span>
            <button
              aria-label="Toggle SortBy: ID"
              class="margin-left-1 usa-button usa-button--unstyled"
              style="cursor: pointer;"
              title="Toggle SortBy: ID"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-chevron-up fa-w-14 hover:text-base text-base"
                data-icon="chevron-up"
                data-prefix="fas"
                focusable="false"
                role="img"
                viewBox="0 0 448 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M240.971 130.524l194.343 194.343c9.373 9.373 9.373 24.569 0 33.941l-22.667 22.667c-9.357 9.357-24.522 9.375-33.901.04L224 227.495 69.255 381.516c-9.379 9.335-24.544 9.317-33.901-.04l-22.667-22.667c-9.373-9.373-9.373-24.569 0-33.941L207.03 130.525c9.372-9.373 24.568-9.373 33.941-.001z"
                  fill="currentColor"
                />
              </svg>
            </button>
          </th>
          <th
            aria-sort="none"
            colspan="1"
            role="columnheader"
            scope="col"
            style="padding: 0.5rem 1rem;"
          >
            <span>
              Name
            </span>
            <button
              aria-label="Toggle SortBy: Name"
              class="margin-left-1 usa-button usa-button--unstyled"
              style="cursor: pointer;"
              title="Toggle SortBy: Name"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-chevron-up fa-w-14 hover:text-base text-base"
                data-icon="chevron-up"
                data-prefix="fas"
                focusable="false"
                role="img"
                viewBox="0 0 448 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M240.971 130.524l194.343 194.343c9.373 9.373 9.373 24.569 0 33.941l-22.667 22.667c-9.357 9.357-24.522 9.375-33.901.04L224 227.495 69.255 381.516c-9.379 9.335-24.544 9.317-33.901-.04l-22.667-22.667c-9.373-9.373-9.373-24.569 0-33.941L207.03 130.525c9.372-9.373 24.568-9.373 33.941-.001z"
                  fill="currentColor"
                />
              </svg>
            </button>
          </th>
          <th
            aria-sort="descending"
            colspan="1"
            role="columnheader"
            scope="col"
            style="padding: 0.5rem 1rem;"
          >
            <span>
              Last Updated
            </span>
            <button
              aria-label="Toggle SortBy: Last Updated"
              class="margin-left-1 usa-button usa-button--unstyled"
              style="cursor: pointer;"
              title="Toggle SortBy: Last Updated"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-chevron-down fa-w-14 hover:text-base text-base-darker"
                data-icon="chevron-down"
                data-prefix="fas"
                focusable="false"
                role="img"
                viewBox="0 0 448 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z"
                  fill="currentColor"
                />
              </svg>
            </button>
          </th>
        </tr>
      </thead>
      <tbody
        role="rowgroup"
      >
        <tr
          role="row"
        >
          <td
            role="cell"
          >
            <input
              aria-labelledby="Banana"
              style="cursor: pointer;"
              title="Banana"
              type="checkbox"
            />
          </td>
          <td
            role="cell"
          >
            1
          </td>
          <td
            role="cell"
          >
            Banana
          </td>
          <td
            role="cell"
          >
            2021-11-11
          </td>
        </tr>
        <tr
          role="row"
        >
          <td
            role="cell"
          >
            <input
              aria-labelledby="Chocolate"
              style="cursor: pointer;"
              title="Chocolate"
              type="checkbox"
            />
          </td>
          <td
            role="cell"
          >
            2
          </td>
          <td
            role="cell"
          >
            Chocolate
          </td>
          <td
            role="cell"
          >
            2020-11-11
          </td>
        </tr>
        <tr
          role="row"
        >
          <td
            role="cell"
          >
            <input
              aria-labelledby="Vanilla"
              style="cursor: pointer;"
              title="Vanilla"
              type="checkbox"
            />
          </td>
          <td
            role="cell"
          >
            3
          </td>
          <td
            role="cell"
          >
            Vanilla
          </td>
          <td
            role="cell"
          >
            2019-11-11
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;
